--- a/TicketToRide/Shared/build.gradle
+++ b/TicketToRide/Shared/build.gradle
@@ -1,7 +1,8 @@
 apply plugin: 'java-library'
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation files('libs/gson-2.2.4.jar')
 }
 
 sourceCompatibility = "7"
