--- a/TicketToRide/app/src/main/AndroidManifest.xml
+++ b/TicketToRide/app/src/main/AndroidManifest.xml
@@ -9,15 +9,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Activity.LoginActivity">
+        <activity android:name="activity.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Activity.GameListActivity" />
-        <activity android:name=".Activity.GameLobbyActivity"></activity>
+        <activity android:name="activity.GameListActivity" />
+        <activity android:name="activity.GameLobbyActivity"></activity>
     </application>
 
 </manifest>
