--- a/.travis.yml
+++ b/.travis.yml
@@ -10,3 +10,16 @@ android:
 
     # The SDK version used to compile your project
     - android-27
+
+    # Emulator:
+    - sys-img-armeabi-v7a-android-26
+
+
+before_cache:
+  - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
+  - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
+cache:
+  directories:
+    - $HOME/.gradle/caches/
+    - $HOME/.gradle/wrapper/
+    - $HOME/.android/build-cache
