--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,8 @@ jdk:
 env:
   global:
     - ANDROID_BUILD_TOOLS_VERSION=28.0.2
-    - ANDROID_ABI=arm64-v8a
-    - ANDROID_TAG=google_apis
+    - ANDROID_ABI=armeabi-v7a
+    - ANDROID_TAG=android
     - ANDROID_API_LEVEL=27
     - EMULATOR_API_LEVEL=26
     - ADB_INSTALL_TIMEOUT=2 # minutes (2 minutes by default)
