--- a/.travis.yml
+++ b/.travis.yml
@@ -1,55 +1,22 @@
 language: android
-
-jdk:
-  - oraclejdk8
-
+jdk: oraclejdk8
 env:
-  global:
-    - ANDROID_BUILD_TOOLS_VERSION=28.0.2
-    - ANDROID_ABI=armeabi-v7a
-    - ANDROID_TAG=android
-    - ANDROID_API_LEVEL=27
-    - EMULATOR_API_LEVEL=26
-    - ADB_INSTALL_TIMEOUT=2 # minutes (2 minutes by default)
+  matrix:
+    - ANDROID_TARGET=android-27  ANDROID_ABI=armeabi-v7a
 
 android:
   components:
-    # Uncomment the lines below if you want to
-    # use the latest revision of Android SDK Tools
     - tools
     - platform-tools
-    - tools
+    - build-tools-28.0.2
+    - $ANDROID_TARGET
+    - sys-img-armeabi-v7a-$ANDROID_TARGET
 
-    # The BuildTools version used by your project
-    - build-tools-$ANDROID_BUILD_TOOLS_VERSION
-
-    # The SDK version used to compile your project
-    - android-$ANDROID_API_LEVEL
-    - android-$EMULATOR_API_LEVEL
-
-    # Support library
-    # Latest artifacts in local repository
-    - extra-android-m2repository
-
-    # Specify at least one system image,
-    # if you need to run emulator(s) during your tests
-    - sys-img-$ANDROID_ABI-$ANDROID_TAG-$EMULATOR_API_LEVEL
-
-before_cache:
-  - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
-  - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
-cache:
-  directories:
-    - $HOME/.gradle/caches/
-    - $HOME/.gradle/wrapper/
-    - $HOME/.android/build-cache
-
-# Emulator Management: Create, Start and Wait
 before_script:
-  - android list targets
-  - echo no | android create avd --force -n test -t "android-"$EMULATOR_API_LEVEL --abi $ANDROID_ABI
-  - emulator -list-avds
+  # Create and start emulator
+  - echo no | android create avd --force -n test -t $ANDROID_TARGET --abi $ANDROID_ABI
   - emulator -avd test -no-skin -no-audio -no-window &
-  - android-wait-for-emulator
-  - adb devices
+  - adb wait-for-device
   - adb shell input keyevent 82 &
+
+script: ./gradlew connectedAndroidTest
