--- a/.travis.yml
+++ b/.travis.yml
@@ -48,7 +48,7 @@ before_script:
   - android list targets
   - echo no | android create avd --force -n test -t "android-"$EMULATOR_API_LEVEL --abi google_apis/$ANDROID_ABI
   - emulator -list-avds
-  - emulator -avd test -no-skin -no-audio -no-window &
+  - emulator -avd test -no-window &
   - android-wait-for-emulator
   - adb devices
   - adb shell input keyevent 82 &
