--- a/.travis.yml
+++ b/.travis.yml
@@ -24,15 +24,15 @@ android:
 
     # The SDK version used to compile your project
     - android-$ANDROID_API_LEVEL
-    - android-$EMULATOR_API_LEVEL
+#    - android-$EMULATOR_API_LEVEL
+#
+#    # Specify at least one system image,
+#    # if you need to run emulator(s) during your tests
+#    - sys-img-$ANDROID_ABI-google_apis-$EMULATOR_API_LEVEL
 
     # Support library
     # Latest artifacts in local repository
     - extra-android-m2repository
-
-    # Specify at least one system image,
-    # if you need to run emulator(s) during your tests
-    - sys-img-$ANDROID_ABI-google_apis-$EMULATOR_API_LEVEL
 
 before_cache:
   - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
@@ -41,14 +41,17 @@ cache:
   directories:
     - $HOME/.gradle/caches/
     - $HOME/.gradle/wrapper/
-    - $HOME/.android/build-cache
+#    - $HOME/.android/build-cache
 
-# Emulator Management: Create, Start and Wait
-before_script:
-  - android list targets
-  - echo no | android create avd --force -n test -t "android-"$EMULATOR_API_LEVEL --abi google_apis/$ANDROID_ABI
-  - emulator -list-avds
-  - emulator -avd test -no-window &
-  - android-wait-for-emulator
-  - adb devices
-  - adb shell input keyevent 82 &
+## Emulator Management: Create, Start and Wait
+#before_script:
+#  - android list targets
+#  - echo no | android create avd --force -n test -t "android-"$EMULATOR_API_LEVEL --abi google_apis/$ANDROID_ABI
+#  - emulator -list-avds
+#  - emulator -avd test -no-window &
+#  - android-wait-for-emulator
+#  - adb devices
+#  - adb shell input keyevent 82 &
+
+script:
+  - gradlew check
