--- a/.travis.yml
+++ b/.travis.yml
@@ -41,7 +41,7 @@ cache:
   directories:
     - $HOME/.gradle/caches/
     - $HOME/.gradle/wrapper/
-#    - $HOME/.android/build-cache
+    - $HOME/.android/build-cache
 
 ## Emulator Management: Create, Start and Wait
 #before_script:
