tried to implement server poller and uifacade methods. edited serverproxy methods.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,5 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:27.1.1'
 
     implementation project(':Shared')
+    implementation 'org.mockito:mockito-android:2.22.0'
 }
