--- a/Shared/build.gradle
+++ b/Shared/build.gradle
@@ -3,8 +3,8 @@ apply plugin: 'java-library'
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation files('libs/gson-2.2.4.jar')
-    testImplementation 'junit:junit:4.12'
     testImplementation 'org.mockito:mockito-core:1.10.19'
+    implementation 'junit:junit:4.12'
 }
 
 sourceCompatibility = "7"
