--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,9 +46,7 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
 
-        <activity
-            android:name=".GameActivity"
-            android:label="@string/title_activity_game"></activity>
+        <activity android:name="activity.GameActivity"/>
     </application>
 
 </manifest>
