added view for game end, made recylcer view and holders

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,9 +46,8 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
 
-        <activity android:name="activity.GameActivity"/>
+        <activity android:name="activity.GameActivity" />
+        <activity android:name="activity.GameEndView"></activity>
     </application>
-
-
 
 </manifest>
