--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="activity.LoginActivity" android:screenOrientation="landscape">
+        <activity android:name="activity.LoginActivity" android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -32,8 +32,8 @@
             android:name="clientserver.ServerPoller"
             android:enabled="true" />
 
-        <activity android:name="activity.GameListActivity" android:screenOrientation="landscape"/>
-        <activity android:name="activity.GameLobbyActivity" android:screenOrientation="landscape" />
+        <activity android:name="activity.GameListActivity" android:screenOrientation="portrait"/>
+        <activity android:name="activity.GameLobbyActivity" android:screenOrientation="portrait" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -46,8 +46,8 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
 
-        <activity android:name="activity.GameActivity" android:screenOrientation="landscape" />
-        <activity android:name="activity.GameEndView" android:screenOrientation="landscape"></activity>
+        <activity android:name="activity.GameActivity" android:screenOrientation="portrait" />
+        <activity android:name="activity.GameEndView" android:screenOrientation="portrait"></activity>
     </application>
 
 </manifest>
