--- a/MongoDB/build.gradle
+++ b/MongoDB/build.gradle
@@ -4,6 +4,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation project(':Server')
     implementation project(':Shared')
+    implementation files('libs/mongo-java-driver-3.9.1.jar')
     implementation "org.mongodb:mongodb-driver-sync:3.9.1"
 }
 
